# android_kernel_fairphone_sm7635-devicetrees

./: BUILD.bazel  Makefile
bindings/leds/: leds-lm3535.txt
bindings/misc/: st,vd628x.yaml
bindings/mmc/: sdhci-msm.txt
bindings/net/: qcom,ethqos.txt  qcom,xpcs.txt
bindings/nvmem/: qcom,qfprom.yaml
bindings/pci/: qcom,msm-ep-pcie.yaml  qcom,msm_mhi_dev.yaml  qcom,msm_mhi_net_dev.yaml
bindings/pinctrl/: qcom,SA8797p-pinctrl.txt
fps_overlay/: Makefile  fp6-sku-603-overlay.dts  fp6-sku-605-overlay.dts  fp6-sku-606-overlay.dts  fp6-sku-607-overlay.dts  fp6-sku-608-overlay.dts  fp6.dts  fps-pm8008.dtsi  platform_map.bzl  volcano-mtp.dtsi  volcano-pinctrl.dtsi  volcano-pmic-overlay.dtsi  volcano-pmiv0104.dtsi  volcano.dtsi
qcom/: Makefile  SKU_list  anorak-pcie.dtsi  anorak.dtsi  blair.dtsi  cliffs-oemvm.dtsi  cliffs-pcie.dtsi  cliffs-vm.dtsi  cliffs.dtsi  direwolf-vm-la.dtsi  direwolf-vm-lv.dtsi  direwolf-vm-pcie.dtsi  direwolf-vm-usb.dtsi  direwolf-vm.dtsi  fp6-sku-600-overlay.dts  fp6-sku-603-overlay.dts  fp6-sku-604-overlay.dts  fp6-sku-605-overlay.dts  fp6-sku-606-overlay.dts  fp6-sku-607-overlay.dts  fp6-sku-608-overlay.dts  fp6.dts  fps-pm8008.dtsi  fps-v2.dts  fps.dts  fpsp-v2.dts  fpsp.dts  holi.dtsi  kalama-pcie.dtsi  kalama.dtsi  lemans-gunyah-vm-flex-qam-overlay.dts  lemans-gunyah-vm-flex-qam.dts  lemans-gunyah-vm-lv-flex-qam-overlay.dts  lemans-gunyah-vm-lv-flex-qam.dts  lemans-gunyah-vm-lv-qam-overlay.dts  lemans-gunyah-vm-lv-qam.dts  lemans-gunyah-vm-lv.dtsi  lemans-gunyah-vm-qam-overlay.dts  lemans-gunyah-vm-qam.dts  lemans-gunyah-vm.dtsi  (+187 more)
(+144 files in other folders)
